--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chai": "^3.5.0",
     "jsdom": "^9.2.1",
     "mocha": "^2.5.3",
-    "nock": "^8.0.0"
+    "nock": "^8.0.0",
+    "request": "^2.76.0"
   }
 }
