Added in ability to change the Wiremock host and port in the extension

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,7 +11,8 @@
     "permissions": [
         "tabs",
         "http://*/*",
-        "https://*/*"
+        "https://*/*",
+        "storage"
     ],
     "icons": { "16": "assets/wiremock-concept-icon-01.png",
            "48": "assets/wiremock-concept-icon-01.png",
